[package]
name = "log_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
panic-rtt-target = "0.2.0"
cortex-m = {version ="0.7.7", features = ["critical-section-single-core"]}
nrf52833-pac = "0.12.2"
embedded-hal = "1.0.0"
nrf52833-hal = "0.18.0"
critical-section = "1.2.0"
microbit-v2 = "0.15.1"

rtt-target = { version = "0.6", optional = true }
defmt = { version = "0.3.9", optional = true }
defmt-rtt = {version = "0.4.1", optional = true}
heapless = { version = "0.8.0", features = ["defmt-03"] }

[features]
rtt = ["dep:rtt-target"]
defmt = ["dep:defmt", "dep:defmt-rtt"]


[profile.release]
debug = 2
codegen-units = 1
lto = "fat"
opt-level = 'z'


