[package]
name = "my-ble"
version = "0.1.0"
edition = "2021"

[dependencies]
# cortex-m = {version = "0.7.7", features = [""]}
cortex-m = "0.7.7"

cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = {version = "0.3.2", features = ["print-defmt"]}

# embassy
embassy-executor = {version = "0.7.0", features = ["arch-cortex-m", "defmt", "executor-thread", "executor-interrupt"]}
# embassy-nrf = {version = "0.3.1", features = ["defmt", "gpiote", "time-driver-rtc1", "time"]}
embassy-nrf = {version = "0.3.1", features = ["defmt", "gpiote","time", "time-driver-rtc1", "nrf52833", "unstable-pac"]}

embassy-time = {version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"]}
embassy-futures = {version = "0.1.1", features = ["defmt"]}
embassy-sync = {version = "0.6.2", features = ["defmt"]}
lsm303agr = {version = "1.1.0", features = ["async"]}
static_cell = "2.1.0"
heapless = "0.7.17"

futures = { version = "0.3.29", default-features = false }
# ble

nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", branch = "master", features =[ "defmt", "s140", "ble-l2cap", "ble-sec", "ble-gatt-server", "nrf52833", "ble-peripheral", "critical-section","critical-section-impl" ] }
# nrf-softdevice =  {version = "0.1.0" ,  features = ["ble-gatt-client"]}
